--- a/PersistentPaintables/PersistentPaintables.uplugin
+++ b/PersistentPaintables/PersistentPaintables.uplugin
@@ -1,10 +1,10 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.2.6",
-	"SemVersion": "1.2.6",
+	"VersionName": "1.2.7",
+	"SemVersion": "1.2.7",
 	"FriendlyName": "Persistent Paintables",
-	"Description": "Paint-Focused QoL Tweaks",
+	"Description": "Paint Focused QoL Tweaks",
 	"Category": "Modding",
 	"CreatedBy": "SirDigby",
 	"CreatedByURL": "https://ficsit.app/user/4Mpda7UPxKixEB",
